--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 { "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }], "functions": {
-    "app/**/*.js": {
+    "routes/**/*.js": {
       "maxDuration": 20
     }
   }}
