--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }], "functions": {
-    "routes/**/*.js": {
-      "maxDuration": 20
-    }
-  }}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
